alignement de la photo

--- a/style.css
+++ b/style.css
@@ -36,3 +36,9 @@ a:hover
   display: inline-block;
   vertical-align: top;
 }
+
+#photo, #identite
+{
+  display: inline-block;
+  vertical-align: top;
+}
